# openbench-studio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BENCHMARK_FIX.md  DEVELOPMENT.md  DYNAMIC_MODELS_IMPLEMENTATION.md  DYNAMIC_MODELS_TESTING.md  Dockerfile.backend  Dockerfile.frontend  OPENBENCH_GITHUB_INTEGRATION.md  README.md  docker-compose.yml  openbench_web_ui_cursor_plan.md  railway.json  test_parser_standalone.py
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: ae436ad4b481_initial_schema.py  b2c3d4e5f678_add_notes_column.py  c3d4e5f6g789_add_performance_indexes.py  d4e5f6g7h890_add_run_templates.py  e5f6g7h8i901_add_cost_tracking.py  e5f6g7h8i901_add_scheduled_for_column.py  e5f6g7h8i902_add_scheduled_for_column.py  f6g7h8i9j012_add_additional_indexes.py  g7h8i9j0k123_add_notification_settings.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: api_keys.py  auth.py  benchmarks.py  health.py  notifications.py  runs.py  settings.py  stats.py  templates.py  ws.py
backend/app/core/: auth.py  config.py  errors.py  pricing.py  rate_limit.py  retry.py
backend/app/db/: migrations.py  models.py  sa_models.py  session.py
backend/app/runner/: command_builder.py  executor.py  progress_parser.py  summary_parser.py
backend/app/services/: api_keys.py  auth.py  benchmark_catalog.py  model_capabilities.py  model_discovery.py  notifications.py  run_store.py  scheduler.py  template_store.py
backend/tests/: conftest.py  test_api_keys.py  test_auth_service.py  test_cli_integration.py  test_routes_api_keys.py  test_routes_auth.py  test_routes_benchmarks.py  test_routes_health.py  test_routes_runs.py  test_routes_settings.py  test_routes_stats.py  test_routes_templates.py  test_run_store.py  test_summary_parser.py
docs/: API.md  CLI_INTERFACE.md  DISCOVERY_ANALYSIS.md  DISCOVERY_PLAN.md  DISCOVERY_RESEARCH.md  IMPROVEMENT_FINAL_PLAN.md  IMPROVEMENT_REVIEW_V1.md  (+1 more)
(+44 files in other folders)
